styles.css
@layer global {
  /* Fonts */

  @font-face {
    font-family: "Playfair Display Variable";
    src: url("/fonts/Playfair-VariableFont_opsz\,wdth\,wght.ttf")
      format("woff2-variations");
    font-weight: 100 900;
    font-stretch: 50% 200%;
  }
  @font-face {
    font-family: "Playfair Display Italic";
    src: url("/fonts/Playfair-Italic-VariableFont_opsz\,wdth\,wght.ttf")
      format("woff2-variations");
    font-weight: 100 900;
    font-stretch: 50% 200%;
  }

  @font-face {
    font-family: "Nunito";
    font-style: normal;
    font-weight: 400;
    src: url(/fonts/Nunito-Regular.ttf);
  }

  @font-face {
    font-family: "Nunito";
    font-style: normal;
    font-weight: 700;
    src: url(/fonts/Nunito-Bold.ttf);
  }
  @font-face {
    font-family: "Nunito";
    font-style: normal;
    font-weight: 200;
    src: url(/fonts/Nunito-Light.ttf);
  }
  :root {
    --fs-14: calc(14 / 16 * 1rem);
    --fs-16: calc(16 / 16 * 1rem);
    --fs-18: calc(18 / 16 * 1rem);
    --fs-24: calc(24 / 16 * 1rem);
    --fs-32: calc(32 / 16 * 1rem);
    --fs-42: calc(42 / 16 * 1rem);
    --fs-72: calc(72 / 16 * 1rem);
  }

  /* Colors */
  :root {
    --c-white: hsl(0, 0%, 100%);
    --c-black: hsl(0, 0%, 14%);
    --c-drkgrey: hsl(0, 1%, 20%);
    --c-mustard: hsl(42, 91%, 57%);
    --c-drkmustard: hsl(42, 100%, 38%);
    --c-grey: #f9f9f9;

    --color-main-bg: var(--c-white);
    --color-text-primary: var(--c-drkgrey);
    --color-text-light: var(--c-white);
    --color-main-bg: var(--c-grey);
  }

  body {
    font-family: "Nunito", Arial, Helvetica, sans-serif;
    background: var(--color-main-bg);
    color: var(--color-text-primary);
    overflow-x: hidden;
  }

  h1 {
    font-size: var(--fs-32);

    @media (width >= calc(900 / 16 * 1rem)) {
      font-size: var(--fs-72);
    }
  }

  h2 {
    font-size: var(--fs-32);
  }
  h3 {
    font-size: var(--fs-24);
  }
  h1,
  h2,
  h3 {
    line-height: 0.9;
    font-family: "Playfair Display Variable", "Times New Roman", Times, serif;
  }

  *,
  *::before,
  *::after {
    box-sizing: border-box;
  }

  * {
    margin: 0;
  }

  a {
    text-decoration: none;
    color: var(--c-drkmustard);
  }

  p {
    line-height: 1.5;
    font-size: var(--fs-16);
    font-weight: 200;

    @media (width >= calc(800 / 16 * 1rem)) {
      font-size: var(--fs-18);
    }
  }

  img,
  picture,
  svg {
    display: block;
    max-width: 100%;
    height: auto;
  }

  .wrapper {
    margin-inline: auto;
    padding: 0 24px;
  }

  .btn {
    padding: 12px 24px;
    border-radius: 8px;
    font-weight: 500;
    cursor: pointer;
    text-transform: uppercase;
    font-size: var(--fs-14);
    letter-spacing: 0.08em;
  }

  .primary {
    background: var(--c-mustard);
    border: none;
    color: var(--color-text-primary);
    transition: all 0.3s ease;

    &:hover {
      background: var(--c-drkmustard);
      color: var(--color-text-light);
    }
  }

  .secondary {
    border: 2px solid var(--c-drkmustard);
    background: transparent;
    color: var(--c-drkmustard);
  }
}

@layer components {
  .topnav {
    max-width: 100%;
    width: 100%;
  }

  .topNavWrapper {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding-block: 8px;

    @media (width >= calc(800 / 16 * 1rem)) {
      padding-block: 15px;
    }
  }

  .logo {
    width: calc(70 / 16 * 1rem);
    &:hover {
      opacity: 0.8;
    }

    @media (width >= calc(800 / 16 * 1rem)) {
      width: calc(128 / 16 * 1rem);
    }
  }
  .navLinks {
    list-style-type: none;
    padding: 0;
    font-weight: 400;
    text-transform: uppercase;
    letter-spacing: 0.05em;
    font-size: var(--fs-16);
    display: flex;
    gap: 20px;
  }

  .navItem {
    &:hover {
      text-decoration: underline 1px;
      text-underline-offset: 4px;
    }
  }

  .navItem a {
    color: var(--color-text-primary);
  }

  /***** HERO SECTION *****/

  .heroWrapper {
    display: grid;
    grid-template: 1fr;
    align-items: center;
    padding: 15px 10px;
    max-width: 85rem;

    @media (width >= calc(800 / 16 * 1rem)) {
      padding: 0 60px;
      grid-template: repeat(1, [row] 1fr) / repeat(2, [col] 1fr);
      max-width: 100rem;
      margin: 0 auto;
    }
  }

  .tagline {
    font-size: var(--fs-14);
    font-weight: 700;
    color: var(--c-drkgrey);
    text-transform: uppercase;
    letter-spacing: 0.1em;

    &::before {
      content: "";
      display: block;
      width: 60px;
      height: 4px;
      background-color: var(--c-mustard);
      margin-bottom: 10px;
    }
  }

  .hero-content {
    line-height: 2;
    padding-block-start: 20px;
    -webkit-animation: slide-in-left 1s cubic-bezier(0.25, 0.46, 0.45, 0.94)
      both;
    animation: slide-in-left 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;

    @media (width >= calc(800 / 16 * 1rem)) {
      padding-block-start: inherit;
    }
  }

  .hero-buttons {
    display: flex;
    gap: 20px;
    margin-top: 30px;
  }

  .blob {
    position: absolute;
    right: -25vw;
    top: -40vw;
    width: max(85vw, 800px);
    animation: float 3s ease-in-out infinite;
    z-index: -1;

    @media (width >= calc(950 / 16 * 1rem)) {
      right: -20vw;
      top: -35vw;
    }
  }

  .hero_img {
    width: min(55vw, 500px);
    float: none;
    margin: 2rem auto;
    -webkit-animation: slide-in-right 1s cubic-bezier(0.25, 0.46, 0.45, 0.94)
      both;
    animation: slide-in-right 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;

    @media (width >= calc(800 / 16 * 1rem)) {
      width: min(32vw, 500px);
      float: right;
    }
  }

  @keyframes float {
    0% {
      transform: translateY(0);
    }
    50% {
      transform: translateY(-20px);
    }
    100% {
      transform: translateY(0);
    }
  }

  .sectionTitle {
    font-size: var(--fs-42);
    font-weight: 700;
    margin-bottom: 40px;
    text-align: center;

    &::after {
      content: "";
      display: block;
      width: 60px;
      height: 4px;
      background-color: var(--c-mustard);
      margin: 10px auto 0;
    }
  }
  .projectsWrapper,
  .aboutWrapper,
  .contactWrapper {
    margin-inline: auto;
    padding: 0 24px;

    @media (width >= calc(600 / 16 * 1rem)) {
      width: min(calc(100% - 48px), calc(1200 / 16 * 1rem));
    }
  }

  .projectsSection,
  .aboutSection,
  .contactSection {
    padding-block: 40px 10px;

    @media (width >= calc(800 / 16 * 1rem)) {
      padding-block: 40px 80px;
    }
  }
  /*** PROJECTS SECTION ***/

  .projectsGrid,
  .aboutContent {
    display: grid;
    gap: 40px;
    padding: 15px 10px;

    @media (width >= calc(800 / 16 * 1rem)) {
      grid-template-columns: repeat(2, 1fr);
    }
  }
  .projectCard {
    display: flex;
    flex-direction: column;
    gap: 5px;
    background-color: var(--c-white);
    padding: 20px;
    border-radius: 25px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    justify-content: space-evenly;

    @media (width >= calc(800 / 16 * 1rem)) {
      align-items: center;
      text-align: center;
    }
  }

  .cardContent {
    padding-block: 20px;
  }
  .cardContent h3 {
    font-weight: 600;
    padding-block-end: 10px;
  }

  .cardContent p {
    font-size: var(--fs-16);
    font-weight: 200;
  }

  .projectCard img {
    border-radius: 8px;
    margin: 0 auto;
    max-width: 100%;
    width: 100%;
    max-height: 100%;
    object-fit: contain;

    @media (width >= calc(800 / 16 * 1rem)) {
      max-height: 250px;
    }
  }

  .project-card p {
    font-size: var(--fs-14);
    color: var(--color-text-primary);
  }

  .project-buttons {
    display: flex;
    gap: 10px;
    margin-top: 5px;
    flex-wrap: wrap;
    justify-content: center;
  }

  /*** ABOUT SECTION ***/
  .aboutContent {
    align-items: center;
  }

  .overlappingImages {
    display: grid;
    grid-template: repeat(6, [row] 1fr) / repeat(12, [col] 1fr);
    grid-gap: 20px;
    max-width: 650px;
    margin: 0 auto;
    overflow: hidden;
    xmin-height: 90vh;
  }

  .rightImg,
  .leftImg {
    align-items: center;
    justify-items: center;
    line-height: 1;
    display: flex;
  }

  .rightImg {
    grid-column: col 2 / span 7;
    grid-row: row 2 / span 4;
    z-index: 2;

    @media (max-width: 700px) {
      grid-column: col 1 / span 8;
      grid-row: row 2 / span 3;
    }
  }

  .leftImg {
    grid-column: col 5 / span 8;
    grid-row: row 1 / span 6;
    z-index: 1;

    @media (max-width: 700px) {
      grid-column: col 5 / 13;
      grid-row: row 1 / 6;
    }
  }

  .overlappingImages img {
    border-radius: 25px;
    width: 100%;
    height: 100%;
    object-fit: cover;
    filter: brightness(0.95);
    xvisibility: hidden;
    max-height: calc(90vh - 40px);

    @media (max-width: 700px) {
      height: 100%;
      max-height: 100%;
    }
  }

  .top-image,
  .bottom-image {
    animation: none;
  }

  .animate .top-image {
    -webkit-animation: slide-in-left 1s cubic-bezier(0.25, 0.46, 0.45, 0.94)
      both;
    animation: slide-in-left 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
  }

  .animate .bottom-image {
    -webkit-animation: slide-in-right 1s cubic-bezier(0.25, 0.46, 0.45, 0.94)
      both;
    animation: slide-in-right 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
    animation-delay: 0.1s;
  }

  /*** CONTACT SECTION ***/
  .formWrapper,
  .contactInfo {
    max-width: calc(600 / 16 * 1rem);
    margin: 0 auto;
    padding: 15px 10px;

    @media (width >= calc(600 / 16 * 1rem)) {
      padding: 0 40px;
      max-width: calc(800 / 16 * 1rem);
    }
  }

  .contactInfo {
    padding-block-end: 40px;
    text-align: center;
  }

  .contactIcons {
    display: flex;
    gap: 20px;
    justify-content: center;
  }
  .contactIcons svg {
    height: 60px;
    transition: filter 0.3s ease;
    fill: var(--c-black);

    &:hover {
    }
  }

  .footerWrapper {
    background-color: var(--c-mustard);
    padding: 40px 15px;
    text-align: center;
    margin-top: 40px;
  }
}

@layer utilities {
  /* Hidden class for accessibility */
  .visually-hidden {
    position: absolute;
    width: 1px;
    height: 1px;
    left: -10000px;
    top: auto;
    overflow: hidden;

    &.skip:focus {
      left: 0;
      width: auto;
      height: auto;
      background: #fff;
      padding: 10px;
      border: 1px solid;
    }
  }
}

/**** ANIMATIONS ****/

/* ----------------------------------------------
 * Generated by Animista on 2026-3-17 23:8:51
 * Licensed under FreeBSD License.
 * See http://animista.net/license for more info. 
 * w: http://animista.net, t: @cssanimista
 * ---------------------------------------------- */

/**
 * ----------------------------------------
 * animation slide-left
 * ----------------------------------------
 */
@-webkit-keyframes slide-in-left {
  0% {
    -webkit-transform: translateX(-100px);
    transform: translateX(-100px);
    opacity: 0;
  }
  100% {
    -webkit-transform: translateX(0);
    transform: translateX(0);
    opacity: 1;
  }
}
@keyframes slide-in-left {
  0% {
    -webkit-transform: translateX(-100px);
    transform: translateX(-100px);
    opacity: 0;
  }
  100% {
    -webkit-transform: translateX(0);
    transform: translateX(0);
    opacity: 1;
  }
}

/**
 * ----------------------------------------
 * animation slide-right
 * ----------------------------------------
 */
@-webkit-keyframes slide-in-right {
  0% {
    -webkit-transform: translateX(1000px);
    transform: translateX(1000px);
    opacity: 0;
  }
  100% {
    -webkit-transform: translateX(0);
    transform: translateX(0);
    opacity: 1;
  }
}
@keyframes slide-in-right {
  0% {
    -webkit-transform: translateX(1000px);
    transform: translateX(1000px);
    opacity: 0;
  }
  100% {
    -webkit-transform: translateX(0);
    transform: translateX(0);
    opacity: 1;
  }
}

